--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-spindle",
   "version": "0.1.0",
-  "description": "Silly text spinners",
+  "description": "Minimalist spinners",
   "main": "jquery.spindle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
