--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "jquery-spindle",
+  "version": "0.2.0",
   "description": "Minimalist spinners",
   "main": "dist/jquery.spindle.js",
   "authors": [
